[metadata]
name = blog
version = 0.0.1
url = https://github.com/asepready/blog/
license = BSD-3-Clause
maintainer = Asep_ready
maintainer_email = asepdevops@gmail.com
description = The basic blog app built in the Flask.
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    flaskr
